name:                eden
version:             0.1.0.0
license:             GPL
license-file:        LICENSE
author:              Tom Sydney Kerckhove
maintainer:          syd.kerckhove@gmail.com
copyright:           2015
category:            Development
build-type:          Simple
cabal-version:       >=1.10

executable eden
  main-is:             Main.hs
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall
                       -fwarn-unused-imports
                       -fwarn-incomplete-patterns
                       -fno-warn-unused-do-bind
                       -fno-warn-name-shadowing
  build-depends:       base                 >= 4.8  && < 4.9
                     , optparse-applicative >= 0.11 && < 0.12
                     , directory            >= 1.2  && < 1.3
                     , filepath             >= 1.4  && < 1.5
                     , transformers         >= 0.4  && < 0.5
                     , mtl                  >= 2.2  && < 2.3
                     , process              >= 1.2  && < 1.3
                     , heredoc              >= 0.2  && < 0.3
                     , template-haskell     >= 2.10 && < 2.11
                     , timeit               >= 1.0  && < 1.1
                     , containers           >= 0.5  && < 0.6

test-suite eden-tests
  type:                exitcode-stdio-1.0
  main-is:             TestMain.hs
  hs-source-dirs:      src, test
  default-language:    Haskell2010
  build-depends:       base  >= 4.8  && < 4.9
                     , HTF   >= 0.13 && < 0.14
                     , HUnit >= 1.2  && < 1.3
