name:                eden
version:             0.1.0.0
license:             GPL
license-file:        LICENSE
author:              Tom Sydney Kerckhove
maintainer:          syd.kerckhove@gmail.com
copyright:           2015
category:            Development
build-type:          Simple
cabal-version:       >=1.10

executable eden
  main-is:             Main.hs
  other-modules:
    Build
    Constants
    Eden
    Execution
    Generate
    Init
    Make
    Parser
    Paths
    Publish
    Run
    Schedule
    Solutions
    Statistics
    TH
    Test
    Types
    Utils
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall
                       -fwarn-unused-imports
                       -fwarn-incomplete-patterns
                       -fno-warn-unused-do-bind
                       -fno-warn-name-shadowing
                       -threaded
                       -rtsopts -with-rtsopts=-N
  build-depends:       base                 >= 4.8  && < 5
                     , optparse-applicative >= 0.11 && < 0.14
                     , directory            >= 1.2  && < 1.4
                     , filepath             >= 1.4  && < 1.5
                     , transformers         >= 0.4  && < 0.6
                     , mtl                  >= 2.2  && < 2.3
                     , process              >= 1.2  && < 1.5
                     , heredoc              >= 0.2  && < 0.3
                     , template-haskell     >= 2.10 && < 2.12
                     , timeit               >= 1.0  && < 1.1
                     , containers           >= 0.5  && < 0.6
                     , parallel-io          >= 0.3  && < 0.4
                     , boxes                >= 0.1  && < 0.2

test-suite eden-tests
  type:                exitcode-stdio-1.0
  main-is:             TestMain.hs
  hs-source-dirs:      src, test
  default-language:    Haskell2010
  build-depends:       base                 >= 4.8  && < 5
                     , HTF                  >= 0.13 && < 0.14
                     , HUnit                >= 1.2  && < 1.6
                     , optparse-applicative 
                     , directory            
                     , filepath            
                     , transformers       
                     , mtl               
                     , process          
                     , heredoc         
                     , template-haskell 
                     , timeit          
                     , containers     
                     , parallel-io   
                     , boxes        
